--- a/index.html
+++ b/index.html
@@ -31,12 +31,13 @@
             <option value="">Mantu</option>
         </optgroup>
         <optgroup label="country">
-            <option value="">TJK</option>
+            <option value="">TAJIKISTAN</option>
             <option value="">USA</option>
             <option value="">RUS</option>
-            <option value="">CHINA</option>
+            <option value="">FRANCE</option>
             <option value="">UZ</option>
             <option value="">KZ</option>
+            <option value="">ALBANIA</option>
            </optgroup>
     </select><br><br><br><br>
 <textarea name="" id="" cols="30" rows="10">opisanie</textarea>
