--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>documents</title>
 </head>
 <body>
     <form action="">
@@ -19,8 +19,6 @@
         <input type="password" re><br>
         <button type="submit">save</button><br>
         <label for="">pc</label>
-        <input type="radio">
-        <label for="">mac</label>
         <input type="radio">
     </form>
     <select name="" id="">
