--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 </head>
 <body>
     <form action="">
-        <label for="">Firstname</label><br>
+        <label for=""> Firstname</label><br>
         <input type="text" placeholder="FirstName">
         <label for=""> LastName</label><br>
         <input type="text" value="Farhod" disabled>
-        <label for="">email</label><br>
+        <label for="">gmail</label><br>
         <input type="email" placeholder="example@gmail.com">
         <label for="">Age</label><br>
         <input type="number" required>
