--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <label for=""> Firstname</label><br>
         <input type="text" placeholder="FirstName">
         <label for=""> LastName</label><br>
-        <input type="text" value="Farhod" disabled>
+        <input type="text" value="Hasan" disabled>
         <label for="">gmail</label><br>
         <input type="email" placeholder="example@gmail.com">
         <label for="">Age</label><br>
